# PISO

./: CITATION.cff  Makefile  README.md  THIRD_PARTY_NOTICES.md  VALIDATION.md  pyproject.toml  requirements.py  requirements.txt  run.py
PISO/: cache.py  config.py  problem.py  runner.py
PISO/methods/: __init__.py  gzo_hs.py  gzo_ns.py  template.py  zo_og.py  zo_ogvr.py  zo_tg.py
configs/: appendix.yaml  quick.yaml  reference.yaml
data/: benchmark_reference.csv  weeks.yaml
data/prices/: 2022_08.csv  2022_12.csv  2022_21.csv  2022_25.csv  2022_29.csv  2022_32.csv  2022_38.csv  2022_49.csv
outputs/reference/: config.yaml  figure_data.csv  final_scores.csv  summary.csv
outputs/reference/cache/: cache_manifest.csv
outputs/reference/cache/week08/: GZO_HS_mu00p19_mumin0p0001_beta00p01_bdecay0p95_mdecay0p95_alpha00p0_adamp0p98_batch030_batchinc2_window1_seed2024_budget5000_metric1000_sims20.csv  (+4 more)
scripts/: compare_summary.py  run_reference.py
src/: cache.py  problem.py  progress.py  report.py  runner.py
src/ddp_pricing/: __init__.py  cli.py  config.py  loading.py  problem.py  runner.py  types.py
src/ddp_pricing/methods/: __init__.py  common.py  gzo_hs.py  gzo_ns.py  template.py  zo_og.py  zo_ogvr.py  zo_tg.py
src/ddp_pricing/reporting/: __init__.py  figure.py  statistics.py  table.py
src/methods/: __init__.py  common.py  gzo_hs.py  gzo_ns.py  piso.py  piso_m.py  template.py  zo_og.py  zo_ogvr.py  zo_tg.py
tests/: test_problem.py  test_quick_run.py  test_sample_budgets.py
(+25 files in other folders)
