[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-dependent-pricing"
version = "0.1.0"
description = "Scientific benchmark suite for stochastic pricing with decision-dependent demand"
requires-python = "==3.12.*"
dependencies = [
  "numpy==2.3.5",
  "scipy==1.17.0",
  "pandas==2.2.3",
  "matplotlib==3.10.8",
  "PyYAML==6.0.3",
]

[project.optional-dependencies]
dev = ["pytest==9.0.2"]

[project.scripts]
ddp-pricing = "ddp_pricing.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
